<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:padding="@dimen/_16sdp"
    app:cardCornerRadius="@dimen/_16sdp"
    tools:context=".ui.calculator.CalculatorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/ed_currency_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:hint="@string/currency_name"
            android:inputType="text"
            android:maxLength="8"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ed_currency_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:hint="@string/currency_rate"
            android:inputType="numberDecimal"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ed_currency_name"
            app:layout_constraintStart_toStartOf="@+id/ed_currency_name"
            app:layout_constraintTop_toBottomOf="@+id/ed_currency_name" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@color/black"
            android:text="@string/ok"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ed_currency_rate"
            app:layout_constraintStart_toStartOf="@+id/ed_currency_rate"
            app:layout_constraintTop_toBottomOf="@+id/ed_currency_rate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>